syntax = "proto3";
package python_to_rust_simple;

// Simple service
service PythonToRustSimpleService {
  // increase given number by one.
  rpc increase (IncreaseRequest) returns (IncreaseResponse) {}
}

// The request number to be increased
message IncreaseRequest {
  int32 num = 1;
}

// The response message containing increased number.
message IncreaseResponse {
  int32 num = 1;
}
